# libdc_util

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt
include/dc_util/: bits.h  dump.h  exit_codes.h  filesystem.h  io.h  networking.h  path.h  streams.h  strings.h  sysexits.h  system.h  types.h
src/: CMakeLists.txt  bits.c  dump.c  filesystem.c  io.c  networking.c  path.c  streams.c  strings.c  system.c  types.c
tests/: CMakeLists.txt
